[package]
name = "placeviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
csv = "1.1"
clap = { version = "3.1", features = ["derive"] }
env_logger = "0.9"
glob = "0.3"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
memmap = "0.7"
mime = "0.3"
png = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1.17", features = ["full"] }
yaml-rust = "0.4"